---
source: src/interpreter/runtime.rs
expression: ctx.file_cache.to_string()
---

    int main (void)
    {
        fprintf (stdout, "%s;%s;%s\n", "plugin", "operation", "microseconds");
        timeInit ();
    
        Key * parentKey = keyNew ("user:/benchmark", KEY_END);
        KDB * handle = elektraKdbOpen (NULL, parentKey);
        fprintf (stdout, CSV_STR_FMT, "core", "kdbOpen", timeGetDiffMicroseconds ());
    
        KeySet * returned = ksNew (0, KS_END);
        timeInit ();
        elektraKdbGet (handle, returned, parentKey);
        fprintf (stdout, CSV_STR_FMT, "core", "kdbGet", timeGetDiffMicroseconds ());
    
        if (ksGetSize (returned) == 0)
        {
            fprintf (stderr, "error: no keys returned. make sure you actually have something in %s!", keyName (parentKey));
            goto error;
        }
    
    error:
        elektraKdbClose (handle, parentKey);
        ksDel (returned);
        keyDel (parentKey);
    
        benchmarkDel ();
    }
    
